Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10950

CONNECT engine table_type=JDBC non-VARCHAR column types do not return NULL correctly

Details

    Description

      Non-VARCHAR column types on remote servers that have null values show up with ZERO values rather than null.

      For example, in the query results below from a CONNECT table of type JDBC, the second row should contain all NULL values. However, only the first column of type VARCHAR actually returns null, the rest incorrectly return zero values.

      varchar  bigint   double    bit    date                time
      Tigger    9          75.23      1     2016-10-00    15:00:00
      NULL     0            0           0     1970-01-01    00:00:00
      

      Attachments

        Activity

          rdyas Robert Dyas added a comment -

          Does this problem with NULL coming back as 0 look like it could be corrected for the next release?

          The behavior is completely consistent across the two (very different) JDBC drivers I have tried (Simba's Salesforce driver and the MySQL JDBC driver).

          Thank you.

          rdyas Robert Dyas added a comment - Does this problem with NULL coming back as 0 look like it could be corrected for the next release? The behavior is completely consistent across the two (very different) JDBC drivers I have tried (Simba's Salesforce driver and the MySQL JDBC driver). Thank you.

          People

            bertrandop Olivier Bertrand
            rdyas Robert Dyas
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.