- Fix MDEV-10950. Null values not retrieved for numeric types.   Now the null is tested using the result set getObject method.   modified:   storage/connect/JdbcInterface.java   modified:   storage/connect/jdbconn.cpp   modified:   storage/connect/jdbconn.h